ApplicationUser created and changes to app settings

--- a/CarMarketplace.Web/appsettings.Development.json
+++ b/CarMarketplace.Web/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "Password": {
+    "RequireLowercase": false,
+    "RequireUppercase": false,
+    "RequireNonAlphanumeric": false,
+    "RequiredLength": 6
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
