--- a/CarMarketplace.Services.Data.Models/CarMarketplace.Services.Data.Models.csproj
+++ b/CarMarketplace.Services.Data.Models/CarMarketplace.Services.Data.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CarMarketplace.Data.Models\CarMarketplace.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
