Cleared some issues Configuring the database

--- a/CarMarketplace.Web/appsettings.Development.json
+++ b/CarMarketplace.Web/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
-  "Password": {
-    "RequireLowercase": false,
-    "RequireUppercase": false,
-    "RequireNonAlphanumeric": false,
-    "RequiredLength": 6
+  "Identity": {
+    "SignIn": {
+      "RequireConfirmedAccount": false
+    },
+    "Password": {
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireNonAlphanumeric": false,
+      "RequiredLength": 4
+    }
   },
   "Logging": {
     "LogLevel": {
