--- a/CarMarketplace.Web/appsettings.json
+++ b/CarMarketplace.Web/appsettings.json
@@ -1,10 +1,12 @@
 {
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CarMarketplaceDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CarMarketplace.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
