Carousel added, but still work left to do

--- a/CarMarketplace.Web/CarMarketplace.Web.csproj
+++ b/CarMarketplace.Web/CarMarketplace.Web.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\CarMarketplace.Services.Data\CarMarketplace.Services.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\testImages\" />
+  </ItemGroup>
+
 </Project>
