Added service Added controller Added migration

--- a/CarMarketplace.Web/CarMarketplace.Web.csproj
+++ b/CarMarketplace.Web/CarMarketplace.Web.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\CarMarketplace.Data\CarMarketplace.Data.csproj" />
     <ProjectReference Include="..\CarMarketplace.Services.Data.Models\CarMarketplace.Services.Data.Models.csproj" />
     <ProjectReference Include="..\CarMarketplace.Services.Data\CarMarketplace.Services.Data.csproj" />
+    <ProjectReference Include="..\CarMarketplace.Services\CarMarketplace.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
