--- a/CarMarketplace.Web/appsettings.json
+++ b/CarMarketplace.Web/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CarMarketplaceDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CarMarketplace.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "Cloudinary": {
+    "CloudName": "carmarketplace",
+    "ApiKey": "346246877944179",
+    "ApiSecret": "OROAt0knDKaQI2OLLIr6Fikxi5I"
   }
 }
