Index page is done with carousel with custom banners New migration

--- a/CarMarketplace.Web.ViewModels/CarMarketplace.Web.ViewModels.csproj
+++ b/CarMarketplace.Web.ViewModels/CarMarketplace.Web.ViewModels.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CarMarketplace.Common\CarMarketplace.Common.csproj" />
+    <ProjectReference Include="..\CarMarketplace.Data.Models\CarMarketplace.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
