Added a button to catalog page

--- a/CarMarketplace.Web/appsettings.json
+++ b/CarMarketplace.Web/appsettings.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Cloudinary": {
-    "CloudName": "carmarketplace",
-    "ApiKey": "346246877944179",
-    "ApiSecret": "OROAt0knDKaQI2OLLIr6Fikxi5I"
-  }
+  "AllowedHosts": "*"
 }
