Major update, because of recent application collapsion. Added Automapper. Added details view with service method

--- a/CarMarketplace.Web.ViewModels/CarMarketplace.Web.ViewModels.csproj
+++ b/CarMarketplace.Web.ViewModels/CarMarketplace.Web.ViewModels.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CarMarketplace.Common\CarMarketplace.Common.csproj" />
     <ProjectReference Include="..\CarMarketplace.Data.Models\CarMarketplace.Data.Models.csproj" />
+    <ProjectReference Include="..\CarMarketplace.Services.Mapping\CarMarketplace.Services.Mapping.csproj" />
   </ItemGroup>
 
 </Project>
