Added 2 more views

--- a/CarMarketplace.Web/CarMarketplace.Web.csproj
+++ b/CarMarketplace.Web/CarMarketplace.Web.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Views\Catalog\MyPosts.cshtml" />
+    <None Include="Views\User\UserPosts.cshtml" />
   </ItemGroup>
 
 </Project>
