Fixed architechture Added a logo Edit is done

--- a/CarMarketplace.Web/CarMarketplace.Web.csproj
+++ b/CarMarketplace.Web/CarMarketplace.Web.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Views\User\UserPosts.cshtml" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
