--- a/CarMarketplace.Web/CarMarketplace.Web.csproj
+++ b/CarMarketplace.Web/CarMarketplace.Web.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\CarMarketplace.Data\CarMarketplace.Data.csproj" />
     <ProjectReference Include="..\CarMarketplace.Services.Mapping\CarMarketplace.Services.Mapping.csproj" />
     <ProjectReference Include="..\CarMarketplace.Services\CarMarketplace.Services.csproj" />
+    <ProjectReference Include="..\CarMarketplace.Web.Infrastructure\CarMarketplace.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\CarMarketplace.Web.ViewModels\CarMarketplace.Web.ViewModels.csproj" />
   </ItemGroup>
 
