Pagination in progress to be added

--- a/CarMarketplace.Web.ViewModels/CarMarketplace.Web.ViewModels.csproj
+++ b/CarMarketplace.Web.ViewModels/CarMarketplace.Web.ViewModels.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\CarMarketplace.Services.Mapping\CarMarketplace.Services.Mapping.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Rent\" />
+  </ItemGroup>
+
 </Project>
